# lbot-ai-interface

./: Dockerfile  README.md  robo_3d_simulator.html
lbot-datagen/lbot-datagen-backend/: Session_Execution_API.postman_collection.json  pom.xml
lbot-datagen/lbot-datagen-backend/src/main/resources/: application.properties
lbot-datagen/lbot-datagen-frontend/: README.md  angular.json  package-lock.json  package.json
lbot-datagen/lbot-datagen-frontend/public/: robo-simulator.css  robo-simulator.html  robo-simulator.js
lbot-datagen/lbot-datagen-frontend/public/simulator/: README.md  index.html
lbot-datagen/lbot-datagen-frontend/public/simulator/js/: camera.js  commands.js  labyrinth.js  main.js  physics.js  robot.js  scene.js  ui.js  utils.js
lbot-datagen/lbot-datagen-frontend/src/: index.html  styles.css
lbot-datagen/lbot-datagen-frontend/src/app/: app.config.ts  app.css  app.html  app.spec.ts  app.ts
lbot-datagen/lbot-datagen-frontend/src/app/components/lbot-chat/: lbot-chat.css  lbot-chat.html  lbot-chat.spec.ts  lbot-chat.ts
lbot-datagen/lbot-datagen-frontend/src/app/components/robo-simulator/: robo-simulator.css  robo-simulator.ts
lbot-datagen/lbot-datagen-frontend/src/app/components/simulator-frame/: simulator-frame.css  (+1 more)
lbot-datagen/lbot-datagen-frontend/src/app/services/: messages-service.ts  simulator-bridge.service.ts
lbot-game/: index.html  main.js  style.css
lbot-natural-language-controller/lbot-v3/web/lbot-client/src/: index.html
lbot-socket-control/: .gitignore  .project-info  CMakeLists.txt  MIGRATION_REPORT.md  README.md  convert-to-lml.txt  enkiSocketControl.cpp  enkiSocketControl.h  robot_controller.py  setup.sh
(+19 files in other folders)
